--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "antd": "^4.10.3",
@@ -16,7 +17,10 @@
     "react-jss": "^10.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
     "@types/react": "^17.0.0",
+    "jest": "^26.6.3",
     "typescript": "^4.1.3"
   }
 }
